2009-07-24  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: Add a generic PTP property setter.

2009-07-19  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: New subsection "status" for all read-only values.
	* config.c: New subsection "action" for simple camera actions.
	* library.c: Enable event mode on EOS Cameras on connect.

	* config.c: Added new "bulb" action for newer Canon EOS cameras,.

		--set-config bulb=1   to put it in Bulb mode
		--set-config bulb=0   to put it out of Bulb mode
		(--wait-event for looking where the image went or so)

2009-07-15  Axel Waggershauser  <awagger@web.de>

	* config.c: some unnecessary debuglines removed.
	* config.c: Decode EOS battery charge value.
	* config.c,library.c: support for 'online-updates' of capturetarget for EOS

2009-07-10  Marcus Meissner  <marcus@jet.franken.de>

        * ptp.c,ptp.h: Generic PTP wrapper function (no data, no output)
          to avoid coding all generic functions as seperate functions.
          Started converting functions to macros.

2009-07-09  Axel Waggershauser  <awagger@web.de>

	* ptp.c: Some sprintf format adjustments.
	* ptp.h: EOS_RemoteRelease doc comments.
	* config.c: More Canon ISO and FStop values for the Canon 5D Mark II.
	* ptp-pack.c,library.c: More EOS debugging output.
	* config.c: Added AEB and DriveMode configuration.
	* ptp.c,ptp.h: Added ptp_canon_eos_requestdevicepropvalue()
	* config.c: request some string types, handle owner, artist,
	  copyright, lensname, serialnr, shuttercount, availableshots
	* ptp.c: decode EOS strings better
	* ptp-pack.c: dpd.GetSet adjustments.
	* ptp-pack.c,config.c,ptp.c: Implemented EOS ImageSize and ImageFormat handling.

2009-05-17  Marcus Meissner  <marcus@jet.franken.de>

	* ptp-pack.c,ptp.c,ptp.h: Enhanced EOS event decoding.
	* ptp.c: Handle wrong sequence number on startup.
	* config.c: EOS camera capturetarget support (card capture not
	  yet working)

	* library.c: Added new ids for:
		- Kodak V803, M1063